// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Text renders without crashing - with custom title 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  />
</div>
`;

exports[`ProductTitle Text with product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - obscuro
  </span>
</div>
`;
